0.20.1 - development
--------------------
Maintenance release.

 * Compatibility with patched bzrlib on debian without copy of configobj
   library inside it. (Bug #715067, Alexander Belchenko)


0.20.0 - 2011/02/03
-------------------
Bazaar 2.3 companion release. Suitable for bzr 2.3 and bzr 2.2.

 * Refactor the config code:
   * Remove the QBzrGlobalConfig class so that we only have one class that
     writes to qbzr.conf.
   * Have a global cache for the QBzrConfig, like we have for bzr GlobalConfig,
     to reduce reading the config from disk. 
   * Refactor the window.saveSize methods, so that we only have to write the
     config to disk once.
   * Lock the config dir when when saving the config file.
     (Gary van der Merwe)
 * qrun: fixed '--execute' mode. (Bug #590229, Simon Kersey)
 * qlog:
   * Refactor loggraphprovider so that the state and computed data is separated
     from the cache. Rename to loggraphviz.
   * Write lots of tests for loggraphviz.
   * Remove LogFilterProxyModel which improves performance.
   * --no-graph mode now shows nodes per revision, indented by merge depth.
   * Fix the layout of octopus merges. (Bug #489383)
   * Add a option --show-trees that shows working tree changes as a node
     in the graph.
   * Fix bug with show log form the tree widget with remote branch.
     (Bug #621934)
 * qcommit: added option to load commit message from a file.
   (Bug #640071, Philip Peitsch)
 * qconflicts: fix bug with access to QBzr configuration. (Bug #675894)
 * When a interupt signal is recived, close rather than showing a error
   message. (Gary van der Merwe)
 * qpush: fixed smart suggestion of new push URLs for lp branches.
   (Bug #710767, Alexander Belchenko)


0.19.3 - 2010/11/26
Maintenance release.

 * The 0.19 series is now marked as incompatible with bzr versions >= 2.3.
   This due to Bug #650905. (Gary van der Merwe)
 * qlog:
   * Fix actions that use the branch menu on PyQt 4.7.4.
     (Bug #621158, Gary van der Merwe)